# MarkIntel

./: .dockerignore  .env.example  .replit  ARCHITECTURE_SUMMARY.md  AUTH_SETUP.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  README-DEPLOYMENT.md  README_TESTING.md  TEST_DOCUMENTATION.md  alembic.ini  docker-compose.yml  migrate.py  pyproject.toml  pytest.ini  replit.md
alembic/: env.py
alembic/versions/: cf6738ae573c_initial_migration.py
app/: main.py  main_old.py
app/api/: auth.py
app/application/: __init__.py
app/core/: __init__.py  auth_middleware.py  container.py  exceptions.py  settings.py
app/domain/: __init__.py
attached_assets/: Pasted--I-d-prioritize-1-Database-Logging-Audit-Trails-not-just-as-a-nice-to-have-but-as-a-foundatio-1760809719387_1760809719388.txt  Pasted-Absolutely-Based-on-your-request-and-the-provided-TypeScript-code-we-ll-convert-the-core-logic--1760729153292_1760729153294.txt  Pasted-Compact-unit-test-checklist-use-as-acceptance-criteria-Backend-FastAPI-SQLAlchemy-Pydantic-Un-1760874781857_1760874781859.txt  Pasted-Given-NexusPlanner-s-core-value-proposition-AI-powered-market-responsive-campaign-generation-the-si-1760803097947_1760803097949.txt  Pasted-Yes-absolutely-and-strategically-so-As-a-senior-enterprise-cloud-AI-architect-PhD-le-1760897585324_1760897585325.txt
docs/: DATABASE_DESIGN.md  FUTURE_ENHANCEMENTS_AND_LIMITATIONS.md  HIGH_LEVEL_DESIGN.md  LOW_LEVEL_DESIGN.md  README.md  SETUP_AND_BUILD_TUTORIAL.md
frontend/: package-lock.json  package.json  vite.config.js
tests/: conftest.py
(+151 files in other folders)
