[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "openai>=2.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]
